log/build_2024-07-23_19-47-10/mpc_controller_pkg/stderr.log
  File "/home/azaria007/Documents/GitHub/VRX_NUMarine/install/lib/python3.10/site-packages/mpc_controller_pkg/mpc_node.py", line 860
    if self.currentwaypoint >= self.waypoints.shape[1]]:
                                                      ^
SyntaxError: unmatched ']'

